parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> gotomain PROGRAMA addDir ID SEMI programa2
Rule 2     programa2 -> atributos programa2
Rule 3     programa2 -> programa3
Rule 4     programa3 -> metodos programa3
Rule 5     programa3 -> programa4
Rule 6     programa4 -> setmainloc principal
Rule 7     atributos -> ATRIBUTOS addDir var
Rule 8     metodos -> METODOS funciones
Rule 9     principal -> PRINCIPAL LPAREN estatutos principal2
Rule 10    principal2 -> estatutos principal2
Rule 11    principal2 -> RPAREN
Rule 12    funciones -> tipo funciones2
Rule 13    funciones -> VOID funciones2
Rule 14    funciones2 -> FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
Rule 15    funciones2 -> FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
Rule 16    funciones2 -> FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3
Rule 17    funciones3 -> estatutos RBRACES addDir funciones
Rule 18    funciones3 -> estatutos RBRACES addDir
Rule 19    funciones3 -> estatutos funciones3
Rule 20    parametros -> tipo ID setCurrentID addValueVarT newParamType COMMA parametros
Rule 21    parametros -> tipo ID setCurrentID addValueVarT newParamType
Rule 22    retornar -> RETURN returnFlag LPAREN retornar2
Rule 23    retornar2 -> exp cuadRetornar COMMA retornar2
Rule 24    retornar2 -> exp cuadRetornar RPAREN
Rule 25    var -> tipo COLON var2
Rule 26    var2 -> ID setCurrentID addValueVarT var3
Rule 27    var2 -> ID setCurrentID addValueVarT LBRACKET newArray CTE_I setL RANGE CTE_I setL var4
Rule 28    var3 -> COMMA var2
Rule 29    var3 -> SEMI var
Rule 30    var3 -> SEMI
Rule 31    var4 -> RBRACKET cerrarNodes var3
Rule 32    var4 -> COMMA increaseDim CTE_I setL RANGE CTE_I setL RBRACKET cerrarNodes var3
Rule 33    tipo -> INT
Rule 34    tipo -> FLOAT
Rule 35    tipo -> CHAR
Rule 36    tipo -> BOOL
Rule 37    exp -> texp checarexp
Rule 38    exp -> exp addOL exp
Rule 39    texp -> gexp checarexp
Rule 40    texp -> texp addOL texp
Rule 41    gexp -> mexp checarexp
Rule 42    gexp -> gexp gexp2 gexp
Rule 43    gexp2 -> LT addO
Rule 44    gexp2 -> LE addO
Rule 45    gexp2 -> GT addO
Rule 46    gexp2 -> GE addO
Rule 47    gexp2 -> EQ addO
Rule 48    gexp2 -> NE addO
Rule 49    mexp -> t checarexp
Rule 50    mexp -> mexp mexp2
Rule 51    mexp2 -> PLUS addO mexp
Rule 52    mexp2 -> MINUS addO mexp
Rule 53    t -> f checarexp
Rule 54    t -> t t2
Rule 55    t2 -> MULT addO t
Rule 56    t2 -> DIV addO t
Rule 57    t2 -> MOD addO t
Rule 58    f -> LPAREN addFakeBottom exp RPAREN popFakeBottom
Rule 59    f -> CTE_I addIntType
Rule 60    f -> CTE_F addFloatType
Rule 61    f -> CTE_S addCharType
Rule 62    f -> TRUE addBoolType
Rule 63    f -> FALSE addBoolType
Rule 64    f -> llamada
Rule 65    f -> ID
Rule 66    f -> ID LBRACKET agregarVar verifyAEx addFakeBottom exp crearCuadA f2
Rule 67    f2 -> COMMA updateDim exp crearCuadA RBRACKET crearCuadB popFakeBottom
Rule 68    f2 -> RBRACKET crearCuadB popFakeBottom
Rule 69    estatutos -> estatutos2 estatutos
Rule 70    estatutos -> estatutos2
Rule 71    estatutos2 -> asigna
Rule 72    estatutos2 -> llamada
Rule 73    estatutos2 -> lee
Rule 74    estatutos2 -> escribe
Rule 75    estatutos2 -> condicion
Rule 76    estatutos2 -> ciclow
Rule 77    estatutos2 -> ciclof
Rule 78    estatutos2 -> funciones
Rule 79    estatutos2 -> retornar
Rule 80    asigna -> ID EQUALS push_id exp SEMI
Rule 81    asigna -> ID EQUALS push_id lee SEMI
Rule 82    asigna -> ID LBRACKET agregarVar verifyAEx addFakeBottom exp crearCuadA f2 EQUALS push_id exp SEMI
Rule 83    llamada -> ID callFunc LPAREN exp genParameter llamada2
Rule 84    llamada2 -> COMMA paramCounter exp genParameter llamada2
Rule 85    llamada2 -> verLastParam RPAREN
Rule 86    lee -> LEE LPAREN cuadlee RPAREN
Rule 87    escribe -> ESCRIBIR LPAREN exp cuadprint escribe2
Rule 88    escribe2 -> COMMA exp cuadprint escribe2
Rule 89    escribe2 -> RPAREN
Rule 90    condicion -> IF condicion2
Rule 91    condicion2 -> LPAREN exp RPAREN genGTF condicion3 ELSE genGT condicion3 fillGoto
Rule 92    condicion2 -> LPAREN exp RPAREN genGTF condicion3 fillGoto
Rule 93    condicion3 -> LBRACES estatutos RBRACES
Rule 94    ciclow -> WHILE storeWhile LPAREN exp RPAREN genGTF DO LBRACES estatutos RBRACES fillWhile
Rule 95    ciclow -> DO storeWhile LBRACES estatutos RBRACES WHILE LPAREN exp RPAREN genDoWhile
Rule 96    ciclof -> FOR ID addForId EQUALS exp genFor TO exp compFor DO LBRACES estatutos RBRACES actFor
Rule 97    addDir -> <empty>
Rule 98    setCurrentID -> <empty>
Rule 99    addValueVarT -> <empty>
Rule 100   addFakeBottom -> <empty>
Rule 101   popFakeBottom -> <empty>
Rule 102   addO -> <empty>
Rule 103   addOL -> LOR
Rule 104   addOL -> LAND
Rule 105   checarexp -> <empty>
Rule 106   addIntType -> <empty>
Rule 107   addFloatType -> <empty>
Rule 108   addCharType -> <empty>
Rule 109   addBoolType -> <empty>
Rule 110   push_id -> <empty>
Rule 111   gotomain -> <empty>
Rule 112   setmainloc -> <empty>
Rule 113   cuadprint -> <empty>
Rule 114   cuadlee -> <empty>
Rule 115   returnFlag -> <empty>
Rule 116   cuadRetornar -> <empty>
Rule 117   genGTF -> <empty>
Rule 118   genGT -> <empty>
Rule 119   fillGoto -> <empty>
Rule 120   storeWhile -> <empty>
Rule 121   genDoWhile -> <empty>
Rule 122   fillWhile -> <empty>
Rule 123   addForId -> <empty>
Rule 124   genFor -> <empty>
Rule 125   compFor -> <empty>
Rule 126   actFor -> <empty>
Rule 127   newParamType -> <empty>
Rule 128   addParamCount -> <empty>
Rule 129   genParameter -> <empty>
Rule 130   addContF -> <empty>
Rule 131   callFunc -> <empty>
Rule 132   paramCounter -> <empty>
Rule 133   verLastParam -> <empty>
Rule 134   setL -> <empty>
Rule 135   newArray -> <empty>
Rule 136   cerrarNodes -> <empty>
Rule 137   crearCuadA -> <empty>
Rule 138   crearCuadB -> <empty>
Rule 139   agregarVar -> <empty>
Rule 140   verifyAEx -> <empty>
Rule 141   updateDim -> <empty>
Rule 142   increaseDim -> <empty>

Terminals, with rules where they appear

ATRIBUTOS            : 7
BOOL                 : 36
CHAR                 : 35
COLON                : 25
COMMA                : 20 23 28 32 67 84 88
CTE_F                : 60
CTE_I                : 27 27 32 32 59
CTE_S                : 61
DIV                  : 56
DO                   : 94 95 96
ELSE                 : 91
EQ                   : 47
EQUALS               : 80 81 82 96
ESCRIBIR             : 87
FALSE                : 63
FLOAT                : 34
FOR                  : 96
FUNCION              : 14 15 16
GE                   : 46
GT                   : 45
ID                   : 1 14 15 16 20 21 26 27 65 66 80 81 82 83 96
IF                   : 90
INT                  : 33
LAND                 : 104
LBRACES              : 14 15 16 93 94 95 96
LBRACKET             : 27 66 82
LE                   : 44
LEE                  : 86
LOR                  : 103
LPAREN               : 9 14 15 16 22 58 83 86 87 91 92 94 95
LT                   : 43
METODOS              : 8
MINUS                : 52
MOD                  : 57
MULT                 : 55
NE                   : 48
PLUS                 : 51
PRINCIPAL            : 9
PROGRAMA             : 1
RANGE                : 27 32
RBRACES              : 17 18 93 94 95 96
RBRACKET             : 31 32 67 68
RETURN               : 22
RPAREN               : 11 14 15 16 24 58 85 86 89 91 92 94 95
SEMI                 : 1 29 30 80 81 82
TO                   : 96
TRUE                 : 62
VOID                 : 13
WHILE                : 94 95
error                : 

Nonterminals, with rules where they appear

actFor               : 96
addBoolType          : 62 63
addCharType          : 61
addContF             : 14 15 16
addDir               : 1 7 14 14 15 15 16 16 17 18
addFakeBottom        : 58 66 82
addFloatType         : 60
addForId             : 96
addIntType           : 59
addO                 : 43 44 45 46 47 48 51 52 55 56 57
addOL                : 38 40
addParamCount        : 14 15 16
addValueVarT         : 20 21 26 27
agregarVar           : 66 82
asigna               : 71
atributos            : 2 14
callFunc             : 83
cerrarNodes          : 31 32
checarexp            : 37 39 41 49 53
ciclof               : 77
ciclow               : 76
compFor              : 96
condicion            : 75
condicion2           : 90
condicion3           : 91 91 92
crearCuadA           : 66 67 82
crearCuadB           : 67 68
cuadRetornar         : 23 24
cuadlee              : 86
cuadprint            : 87 88
escribe              : 74
escribe2             : 87 88
estatutos            : 9 10 17 18 19 69 93 94 95 96
estatutos2           : 69 70
exp                  : 23 24 38 38 58 66 67 80 82 82 83 84 87 88 91 92 94 95 96 96
f                    : 53
f2                   : 66 82
fillGoto             : 91 92
fillWhile            : 94
funciones            : 8 17 78
funciones2           : 12 13
funciones3           : 14 15 16 19
genDoWhile           : 95
genFor               : 96
genGT                : 91
genGTF               : 91 92 94
genParameter         : 83 84
gexp                 : 39 42 42
gexp2                : 42
gotomain             : 1
increaseDim          : 32
lee                  : 73 81
llamada              : 64 72
llamada2             : 83 84
metodos              : 4
mexp                 : 41 50 51 52
mexp2                : 50
newArray             : 27
newParamType         : 20 21
paramCounter         : 84
parametros           : 14 15 16 20
popFakeBottom        : 58 67 68
principal            : 6
principal2           : 9 10
programa             : 0
programa2            : 1 2
programa3            : 3 4
programa4            : 5
push_id              : 80 81 82
retornar             : 79
retornar2            : 22 23
returnFlag           : 22
setCurrentID         : 20 21 26 27
setL                 : 27 27 32 32
setmainloc           : 6
storeWhile           : 94 95
t                    : 49 54 55 56 57
t2                   : 54
texp                 : 37 40 40
tipo                 : 12 20 21 25
updateDim            : 67
var                  : 7 16 29
var2                 : 25 28
var3                 : 26 31 32
var4                 : 27
verLastParam         : 85
verifyAEx            : 66 82

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . gotomain PROGRAMA addDir ID SEMI programa2
    (111) gotomain -> .

    PROGRAMA        reduce using rule 111 (gotomain -> .)

    programa                       shift and go to state 1
    gotomain                       shift and go to state 2

state 1

    (0) S' -> programa .



state 2

    (1) programa -> gotomain . PROGRAMA addDir ID SEMI programa2

    PROGRAMA        shift and go to state 3


state 3

    (1) programa -> gotomain PROGRAMA . addDir ID SEMI programa2
    (97) addDir -> .

    ID              reduce using rule 97 (addDir -> .)

    addDir                         shift and go to state 4

state 4

    (1) programa -> gotomain PROGRAMA addDir . ID SEMI programa2

    ID              shift and go to state 5


state 5

    (1) programa -> gotomain PROGRAMA addDir ID . SEMI programa2

    SEMI            shift and go to state 6


state 6

    (1) programa -> gotomain PROGRAMA addDir ID SEMI . programa2
    (2) programa2 -> . atributos programa2
    (3) programa2 -> . programa3
    (7) atributos -> . ATRIBUTOS addDir var
    (4) programa3 -> . metodos programa3
    (5) programa3 -> . programa4
    (8) metodos -> . METODOS funciones
    (6) programa4 -> . setmainloc principal
    (112) setmainloc -> .

    ATRIBUTOS       shift and go to state 10
    METODOS         shift and go to state 13
    PRINCIPAL       reduce using rule 112 (setmainloc -> .)

    programa2                      shift and go to state 7
    atributos                      shift and go to state 8
    programa3                      shift and go to state 9
    metodos                        shift and go to state 11
    programa4                      shift and go to state 12
    setmainloc                     shift and go to state 14

state 7

    (1) programa -> gotomain PROGRAMA addDir ID SEMI programa2 .

    $end            reduce using rule 1 (programa -> gotomain PROGRAMA addDir ID SEMI programa2 .)


state 8

    (2) programa2 -> atributos . programa2
    (2) programa2 -> . atributos programa2
    (3) programa2 -> . programa3
    (7) atributos -> . ATRIBUTOS addDir var
    (4) programa3 -> . metodos programa3
    (5) programa3 -> . programa4
    (8) metodos -> . METODOS funciones
    (6) programa4 -> . setmainloc principal
    (112) setmainloc -> .

    ATRIBUTOS       shift and go to state 10
    METODOS         shift and go to state 13
    PRINCIPAL       reduce using rule 112 (setmainloc -> .)

    atributos                      shift and go to state 8
    programa2                      shift and go to state 15
    programa3                      shift and go to state 9
    metodos                        shift and go to state 11
    programa4                      shift and go to state 12
    setmainloc                     shift and go to state 14

state 9

    (3) programa2 -> programa3 .

    $end            reduce using rule 3 (programa2 -> programa3 .)


state 10

    (7) atributos -> ATRIBUTOS . addDir var
    (97) addDir -> .

    INT             reduce using rule 97 (addDir -> .)
    FLOAT           reduce using rule 97 (addDir -> .)
    CHAR            reduce using rule 97 (addDir -> .)
    BOOL            reduce using rule 97 (addDir -> .)

    addDir                         shift and go to state 16

state 11

    (4) programa3 -> metodos . programa3
    (4) programa3 -> . metodos programa3
    (5) programa3 -> . programa4
    (8) metodos -> . METODOS funciones
    (6) programa4 -> . setmainloc principal
    (112) setmainloc -> .

    METODOS         shift and go to state 13
    PRINCIPAL       reduce using rule 112 (setmainloc -> .)

    metodos                        shift and go to state 11
    programa3                      shift and go to state 17
    programa4                      shift and go to state 12
    setmainloc                     shift and go to state 14

state 12

    (5) programa3 -> programa4 .

    $end            reduce using rule 5 (programa3 -> programa4 .)


state 13

    (8) metodos -> METODOS . funciones
    (12) funciones -> . tipo funciones2
    (13) funciones -> . VOID funciones2
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR
    (36) tipo -> . BOOL

    VOID            shift and go to state 20
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

    funciones                      shift and go to state 18
    tipo                           shift and go to state 19

state 14

    (6) programa4 -> setmainloc . principal
    (9) principal -> . PRINCIPAL LPAREN estatutos principal2

    PRINCIPAL       shift and go to state 26

    principal                      shift and go to state 25

state 15

    (2) programa2 -> atributos programa2 .

    $end            reduce using rule 2 (programa2 -> atributos programa2 .)


state 16

    (7) atributos -> ATRIBUTOS addDir . var
    (25) var -> . tipo COLON var2
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR
    (36) tipo -> . BOOL

    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

    var                            shift and go to state 27
    tipo                           shift and go to state 28

state 17

    (4) programa3 -> metodos programa3 .

    $end            reduce using rule 4 (programa3 -> metodos programa3 .)


state 18

    (8) metodos -> METODOS funciones .

    METODOS         reduce using rule 8 (metodos -> METODOS funciones .)
    PRINCIPAL       reduce using rule 8 (metodos -> METODOS funciones .)


state 19

    (12) funciones -> tipo . funciones2
    (14) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
    (15) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
    (16) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3

    FUNCION         shift and go to state 30

    funciones2                     shift and go to state 29

state 20

    (13) funciones -> VOID . funciones2
    (14) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
    (15) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
    (16) funciones2 -> . FUNCION ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3

    FUNCION         shift and go to state 30

    funciones2                     shift and go to state 31

state 21

    (33) tipo -> INT .

    FUNCION         reduce using rule 33 (tipo -> INT .)
    COLON           reduce using rule 33 (tipo -> INT .)
    ID              reduce using rule 33 (tipo -> INT .)


state 22

    (34) tipo -> FLOAT .

    FUNCION         reduce using rule 34 (tipo -> FLOAT .)
    COLON           reduce using rule 34 (tipo -> FLOAT .)
    ID              reduce using rule 34 (tipo -> FLOAT .)


state 23

    (35) tipo -> CHAR .

    FUNCION         reduce using rule 35 (tipo -> CHAR .)
    COLON           reduce using rule 35 (tipo -> CHAR .)
    ID              reduce using rule 35 (tipo -> CHAR .)


state 24

    (36) tipo -> BOOL .

    FUNCION         reduce using rule 36 (tipo -> BOOL .)
    COLON           reduce using rule 36 (tipo -> BOOL .)
    ID              reduce using rule 36 (tipo -> BOOL .)


state 25

    (6) programa4 -> setmainloc principal .

    $end            reduce using rule 6 (programa4 -> setmainloc principal .)


state 26

    (9) principal -> PRINCIPAL . LPAREN estatutos principal2

    LPAREN          shift and go to state 32


state 27

    (7) atributos -> ATRIBUTOS addDir var .

    ATRIBUTOS       reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    METODOS         reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    PRINCIPAL       reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    ID              reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    LEE             reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    ESCRIBIR        reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    IF              reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    WHILE           reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    DO              reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    FOR             reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    VOID            reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    RETURN          reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    INT             reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    FLOAT           reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    CHAR            reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)
    BOOL            reduce using rule 7 (atributos -> ATRIBUTOS addDir var .)


state 28

    (25) var -> tipo . COLON var2

    COLON           shift and go to state 33


state 29

    (12) funciones -> tipo funciones2 .

    METODOS         reduce using rule 12 (funciones -> tipo funciones2 .)
    PRINCIPAL       reduce using rule 12 (funciones -> tipo funciones2 .)
    ID              reduce using rule 12 (funciones -> tipo funciones2 .)
    LEE             reduce using rule 12 (funciones -> tipo funciones2 .)
    ESCRIBIR        reduce using rule 12 (funciones -> tipo funciones2 .)
    IF              reduce using rule 12 (funciones -> tipo funciones2 .)
    WHILE           reduce using rule 12 (funciones -> tipo funciones2 .)
    DO              reduce using rule 12 (funciones -> tipo funciones2 .)
    FOR             reduce using rule 12 (funciones -> tipo funciones2 .)
    VOID            reduce using rule 12 (funciones -> tipo funciones2 .)
    RETURN          reduce using rule 12 (funciones -> tipo funciones2 .)
    INT             reduce using rule 12 (funciones -> tipo funciones2 .)
    FLOAT           reduce using rule 12 (funciones -> tipo funciones2 .)
    CHAR            reduce using rule 12 (funciones -> tipo funciones2 .)
    BOOL            reduce using rule 12 (funciones -> tipo funciones2 .)
    RPAREN          reduce using rule 12 (funciones -> tipo funciones2 .)
    RBRACES         reduce using rule 12 (funciones -> tipo funciones2 .)


state 30

    (14) funciones2 -> FUNCION . ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
    (15) funciones2 -> FUNCION . ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
    (16) funciones2 -> FUNCION . ID addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3

    ID              shift and go to state 34


state 31

    (13) funciones -> VOID funciones2 .

    METODOS         reduce using rule 13 (funciones -> VOID funciones2 .)
    PRINCIPAL       reduce using rule 13 (funciones -> VOID funciones2 .)
    ID              reduce using rule 13 (funciones -> VOID funciones2 .)
    LEE             reduce using rule 13 (funciones -> VOID funciones2 .)
    ESCRIBIR        reduce using rule 13 (funciones -> VOID funciones2 .)
    IF              reduce using rule 13 (funciones -> VOID funciones2 .)
    WHILE           reduce using rule 13 (funciones -> VOID funciones2 .)
    DO              reduce using rule 13 (funciones -> VOID funciones2 .)
    FOR             reduce using rule 13 (funciones -> VOID funciones2 .)
    VOID            reduce using rule 13 (funciones -> VOID funciones2 .)
    RETURN          reduce using rule 13 (funciones -> VOID funciones2 .)
    INT             reduce using rule 13 (funciones -> VOID funciones2 .)
    FLOAT           reduce using rule 13 (funciones -> VOID funciones2 .)
    CHAR            reduce using rule 13 (funciones -> VOID funciones2 .)
    BOOL            reduce using rule 13 (funciones -> VOID funciones2 .)
    RPAREN          reduce using rule 13 (funciones -> VOID funciones2 .)
    RBRACES         reduce using rule 13 (funciones -> VOID funciones2 .)


state 32

    (9) principal -> PRINCIPAL LPAREN . estatutos principal2
    (69) estatutos -> . estatutos2 estatutos
    (70) estatutos -> . estatutos2
    (71) estatutos2 -> . asigna
    (72) estatutos2 -> . llamada
    (73) estatutos2 -> . lee
    (74) estatutos2 -> . escribe
    (75) estatutos2 -> . condicion
    (76) estatutos2 -> . ciclow
    (77) estatutos2 -> . ciclof
    (78) estatutos2 -> . funciones
    (79) estatutos2 -> . retornar
    (80) asigna -> . ID EQUALS push_id exp SEMI
    (81) asigna -> . ID EQUALS push_id lee SEMI
    (82) asigna -> . ID LBRACKET agregarVar verifyAEx addFakeBottom exp crearCuadA f2 EQUALS push_id exp SEMI
    (83) llamada -> . ID callFunc LPAREN exp genParameter llamada2
    (86) lee -> . LEE LPAREN cuadlee RPAREN
    (87) escribe -> . ESCRIBIR LPAREN exp cuadprint escribe2
    (90) condicion -> . IF condicion2
    (94) ciclow -> . WHILE storeWhile LPAREN exp RPAREN genGTF DO LBRACES estatutos RBRACES fillWhile
    (95) ciclow -> . DO storeWhile LBRACES estatutos RBRACES WHILE LPAREN exp RPAREN genDoWhile
    (96) ciclof -> . FOR ID addForId EQUALS exp genFor TO exp compFor DO LBRACES estatutos RBRACES actFor
    (12) funciones -> . tipo funciones2
    (13) funciones -> . VOID funciones2
    (22) retornar -> . RETURN returnFlag LPAREN retornar2
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR
    (36) tipo -> . BOOL

    ID              shift and go to state 46
    LEE             shift and go to state 47
    ESCRIBIR        shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    VOID            shift and go to state 20
    RETURN          shift and go to state 53
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

    estatutos                      shift and go to state 35
    estatutos2                     shift and go to state 36
    asigna                         shift and go to state 37
    llamada                        shift and go to state 38
    lee                            shift and go to state 39
    escribe                        shift and go to state 40
    condicion                      shift and go to state 41
    ciclow                         shift and go to state 42
    ciclof                         shift and go to state 43
    funciones                      shift and go to state 44
    retornar                       shift and go to state 45
    tipo                           shift and go to state 19

state 33

    (25) var -> tipo COLON . var2
    (26) var2 -> . ID setCurrentID addValueVarT var3
    (27) var2 -> . ID setCurrentID addValueVarT LBRACKET newArray CTE_I setL RANGE CTE_I setL var4

    ID              shift and go to state 55

    var2                           shift and go to state 54

state 34

    (14) funciones2 -> FUNCION ID . addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF atributos funciones3
    (15) funciones2 -> FUNCION ID . addDir LPAREN addDir parametros RPAREN addParamCount LBRACES addContF funciones3
    (16) funciones2 -> FUNCION ID . addDir LPAREN addDir parametros RPAREN addParamCount LBRACES var addContF funciones3
    (97) addDir -> .

    LPAREN          reduce using rule 97 (addDir -> .)

    addDir                         shift and go to state 56

state 35

    (9) principal -> PRINCIPAL LPAREN estatutos . principal2
    (10) principal2 -> . estatutos principal2
    (11) principal2 -> . RPAREN
    (69) estatutos -> . estatutos2 estatutos
    (70) estatutos -> . estatutos2
    (71) estatutos2 -> . asigna
    (72) estatutos2 -> . llamada
    (73) estatutos2 -> . lee
    (74) estatutos2 -> . escribe
    (75) estatutos2 -> . condicion
    (76) estatutos2 -> . ciclow
    (77) estatutos2 -> . ciclof
    (78) estatutos2 -> . funciones
    (79) estatutos2 -> . retornar
    (80) asigna -> . ID EQUALS push_id exp SEMI
    (81) asigna -> . ID EQUALS push_id lee SEMI
    (82) asigna -> . ID LBRACKET agregarVar verifyAEx addFakeBottom exp crearCuadA f2 EQUALS push_id exp SEMI
    (83) llamada -> . ID callFunc LPAREN exp genParameter llamada2
    (86) lee -> . LEE LPAREN cuadlee RPAREN
    (87) escribe -> . ESCRIBIR LPAREN exp cuadprint escribe2
    (90) condicion -> . IF condicion2
    (94) ciclow -> . WHILE storeWhile LPAREN exp RPAREN genGTF DO LBRACES estatutos RBRACES fillWhile
    (95) ciclow -> . DO storeWhile LBRACES estatutos RBRACES WHILE LPAREN exp RPAREN genDoWhile
    (96) ciclof -> . FOR ID addForId EQUALS exp genFor TO exp compFor DO LBRACES estatutos RBRACES actFor
    (12) funciones -> . tipo funciones2
    (13) funciones -> . VOID funciones2
    (22) retornar -> . RETURN returnFlag LPAREN retornar2
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR
    (36) tipo -> . BOOL

    RPAREN          shift and go to state 59
    ID              shift and go to state 46
    LEE             shift and go to state 47
    ESCRIBIR        shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    VOID            shift and go to state 20
    RETURN          shift and go to state 53
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

    estatutos                      shift and go to state 57
    principal2                     shift and go to state 58
    estatutos2                     shift and go to state 36
    asigna                         shift and go to state 37
    llamada                        shift and go to state 38
    lee                            shift and go to state 39
    escribe                        shift and go to state 40
    condicion                      shift and go to state 41
    ciclow                         shift and go to state 42
    ciclof                         shift and go to state 43
    funciones                      shift and go to state 44
    retornar                       shift and go to state 45
    tipo                           shift and go to state 19

state 36

    (69) estatutos -> estatutos2 . estatutos
    (70) estatutos -> estatutos2 .
    (69) estatutos -> . estatutos2 estatutos
    (70) estatutos -> . estatutos2
    (71) estatutos2 -> . asigna
    (72) estatutos2 -> . llamada
    (73) estatutos2 -> . lee
    (74) estatutos2 -> . escribe
    (75) estatutos2 -> . condicion
    (76) estatutos2 -> . ciclow
    (77) estatutos2 -> . ciclof
    (78) estatutos2 -> . funciones
    (79) estatutos2 -> . retornar
    (80) asigna -> . ID EQUALS push_id exp SEMI
    (81) asigna -> . ID EQUALS push_id lee SEMI
    (82) asigna -> . ID LBRACKET agregarVar verifyAEx addFakeBottom exp crearCuadA f2 EQUALS push_id exp SEMI
    (83) llamada -> . ID callFunc LPAREN exp genParameter llamada2
    (86) lee -> . LEE LPAREN cuadlee RPAREN
    (87) escribe -> . ESCRIBIR LPAREN exp cuadprint escribe2
    (90) condicion -> . IF condicion2
    (94) ciclow -> . WHILE storeWhile LPAREN exp RPAREN genGTF DO LBRACES estatutos RBRACES fillWhile
    (95) ciclow -> . DO storeWhile LBRACES estatutos RBRACES WHILE LPAREN exp RPAREN genDoWhile
    (96) ciclof -> . FOR ID addForId EQUALS exp genFor TO exp compFor DO LBRACES estatutos RBRACES actFor
    (12) funciones -> . tipo funciones2
    (13) funciones -> . VOID funciones2
    (22) retornar -> . RETURN returnFlag LPAREN retornar2
    (33) tipo -> . INT
    (34) tipo -> . FLOAT
    (35) tipo -> . CHAR
    (36) tipo -> . BOOL

  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for LEE resolved as shift
  ! shift/reduce conflict for ESCRIBIR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for VOID resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    RPAREN          reduce using rule 70 (estatutos -> estatutos2 .)
    RBRACES         reduce using rule 70 (estatutos -> estatutos2 .)
    ID              shift and go to state 46
    LEE             shift and go to state 47
    ESCRIBIR        shift and go to state 48
    IF              shift and go to state 49
    WHILE           shift and go to state 50
    DO              shift and go to state 51
    FOR             shift and go to state 52
    VOID            shift and go to state 20
    RETURN          shift and go to state 53
    INT             shift and go to state 21
    FLOAT           shift and go to state 22
    CHAR            shift and go to state 23
    BOOL            shift and go to state 24

  ! ID              [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! LEE             [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! ESCRIBIR        [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! IF              [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! WHILE           [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! DO              [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! FOR             [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! VOID            [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! RETURN          [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! INT             [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! FLOAT           [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! CHAR            [ reduce using rule 70 (estatutos -> estatutos2 .) ]
  ! BOOL            [ reduce using rule 70 (estatutos -> estatutos2 .) ]

    estatutos2                     shift and go to state 36
    estatutos                      shift and go to state 60
